# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/communication/netstack/netstack_config.gni")

##############################fuzztest##########################################

utils_include = [
  "$SUBSYSTEM_DIR/netstack/utils/common_utils/include",
  "$SUBSYSTEM_DIR/netstack/utils/log/include",
  "$SUBSYSTEM_DIR/netstack/utils/napi_utils/include",
]

common_external_deps = [
  "c_utils:utils",
  "eventhandler:libeventhandler",
  "hilog:libhilog",
  "ipc:ipc_core",
  "openssl:libcrypto_shared",
  "openssl:libssl_shared",
]

ohos_fuzztest("NetsslInnerFuzzTest") {
  module_out_path = fuzz_test_path
  fuzz_config_file = "$NETSTACK_DIR/test/fuzztest/netsslinner_fuzzer"
  include_dirs = [
    "$NETSTACK_DIR/utils/napi_utils/include",
    "$NETSTACK_DIR/interfaces/kits/c/net_ssl/include",
    "$NETSTACK_DIR/frameworks/native/net_ssl/include",
  ]
  include_dirs += utils_include

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "$NETSTACK_DIR/frameworks/native/net_ssl/net_ssl_verify_cert.cpp",
    "$NETSTACK_DIR/interfaces/kits/c/net_ssl/src/net_ssl_c.cpp",
    "$SUBSYSTEM_DIR/netstack/utils/common_utils/src/netstack_common_utils.cpp",
    "netssl_inner_fuzzer.cpp",
  ]

  deps = [
    "$NETSTACK_DIR/interfaces/kits/c/net_ssl:net_ssl_ndk",
    "$NETSTACK_DIR/utils/napi_utils:napi_utils",
    "$NETSTACK_INNERKITS_DIR/net_ssl:net_ssl",
  ]

  external_deps = common_external_deps
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":NetsslInnerFuzzTest" ]
}
###############################################################################
