# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/communication/netstack/netstack_config.gni")

utils_include = [
  "$SUBSYSTEM_DIR/netstack/utils/common_utils/include",
  "$SUBSYSTEM_DIR/netstack/utils/log/include",
  "$SUBSYSTEM_DIR/netstack/utils/napi_utils/include",
]

common_external_deps = [
  "curl:curl_shared",
  "c_utils:utils",
  "hilog:libhilog",
  "napi:ace_napi",
]

ohos_unittest("http_interceptor_unittest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  module_out_path = "netstack/netstack/http_interceptor_unittest"

  include_dirs = [ "$NETSTACK_DIR/interfaces/kits/c/http_interceptor/include" ]
  include_dirs += utils_include

  deps = [
    "$NETSTACK_DIR/interfaces/innerkits/http_interceptor:http_interceptor",
    "$NETSTACK_DIR/interfaces/kits/c/http_interceptor:http_interceptor_ndk",
    "$NETSTACK_DIR/utils/napi_utils:napi_utils",    
  ]

  external_deps = common_external_deps

  sources = [
    "HttpInterceptorInterfaceTest.cpp",
    "HttpInterceptorTest.cpp",
    "HttpInterceptorTypeTest.cpp",
  ]

  part_name = "netstack"
  subsystem_name = "communication"
}

group("unittest") {
  testonly = true
  deps = [ ":http_interceptor_unittest" ]
}
