# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/communication/netstack/netstack_config.gni")

SOCKET_NAPI = "$NETSTACK_DIR/frameworks/js/napi/socket"

utils_include = [
  "$SUBSYSTEM_DIR/netstack/utils/common_utils/include",
  "$SUBSYSTEM_DIR/netstack/utils/log/include",
  "$SUBSYSTEM_DIR/netstack/utils/napi_utils/include",
  "$THIRD_PARTY_ROOT/curl/include",
]

common_external_deps = [
  "hilog:libhilog",
  "napi:ace_napi",
]

ohos_unittest("socket_unittest") {
  module_out_path = "netstack/socket_unittest"

  include_dirs = [
    "$NETSTACK_DIR/utils/napi_utils/include",
    "$SOCKET_NAPI/async_context/include",
    "$SOCKET_NAPI/async_work/include",
    "$SOCKET_NAPI/constant/include",
    "$SOCKET_NAPI/options/include",
    "$SOCKET_NAPI/socket_exec/include",
    "$SOCKET_NAPI/socket_module/include",
  ]
  include_dirs += utils_include

  sources = [
    "$SOCKET_NAPI/async_context/src/multicast_get_loopback_context.cpp",
    "$SOCKET_NAPI/async_context/src/multicast_get_ttl_context.cpp",
    "$SOCKET_NAPI/async_context/src/multicast_membership_context.cpp",
    "$SOCKET_NAPI/async_context/src/multicast_set_loopback_context.cpp",
    "$SOCKET_NAPI/async_context/src/multicast_set_ttl_context.cpp",
    "$SOCKET_NAPI/options/src/net_address.cpp",
    "$SOCKET_NAPI/options/src/socket_remote_info.cpp",
    "$SOCKET_NAPI/socket_exec/src/socket_exec.cpp",
    "SocketTest.cpp",
  ]

  deps = [
    "$NETSTACK_DIR/frameworks/js/napi/socket:socket",
    "$NETSTACK_DIR/utils/napi_utils:napi_utils",
  ]

  external_deps = common_external_deps

  part_name = "netstack"
  subsystem_name = "communication"
}

group("unittest") {
  testonly = true
  deps = [ ":socket_unittest" ]
}
